--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <div id="slide-1" class="slide">
             <h1 class="slide-title">The Big Art Road Show</h1>
             <h2 class="subtitle font-light mb-8">Everyone gets to be an artist.</h2>
-            <div class="visual slide-1-visual"></div>
+            <video class="visual" autoplay loop muted playsinline>
+                <source src="media/videos/Warhol.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
 
         <!-- Slide 2: The Problem -->
