--- a/index.html
+++ b/index.html
@@ -32,58 +32,87 @@
 
         <!-- Slide 2: The Problem -->
         <div id="slide-2" class="slide content-slide">
-            <h2 class="slide-title">The Unfamous Artist.</h2>
-            <ul class="text-left slide-content list-disc ml-8">
-                <li>Art is so much work. Artists are so alone. They can't get famous if they just sit in a room.</li>
-                <li>Art supplies are expensive. It's like trying to make something valuable out of gold.</li>
-                <li>The business is boring. Nobody wants to be a salesman.</li>
-            </ul>
+            <div class="slide-text-content">
+                <h2 class="slide-title">The Unfamous Artist.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>Art is so much work. Artists are so alone. They can't get famous if they just sit in a room.</li>
+                    <li>Art supplies are expensive. It's like trying to make something valuable out of gold.</li>
+                    <li>The business is boring. Nobody wants to be a salesman.</li>
+                </ul>
+            </div>
             <div class="visual slide-2-visual"></div>
         </div>
 
         <!-- Slide 3: Our Solution -->
         <div id="slide-3" class="slide content-slide">
-            <h2 class="slide-title">The Factory Truck: A Studio on Wheels.</h2>
-            <ul class="text-left slide-content list-disc ml-8">
-                <li>We're a factory. We roll right up and get to work.</li>
-                <li>Everyone gets to be a collaborator. That's the best part.</li>
-                <li>We make a scene. A new scene in every city.</li>
-            </ul>
+            <div class="slide-text-content">
+                <h2 class="slide-title">The Factory Truck: A Studio on Wheels.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>We're a factory. We roll right up and get to work.</li>
+                    <li>Everyone gets to be a collaborator. That's the best part.</li>
+                    <li>We make a scene. A new scene in every city.</li>
+                </ul>
+            </div>
             <div class="visual slide-3-visual"></div>
         </div>
 
         <!-- Slide 4: The Pilot -->
         <div id="slide-4" class="slide content-slide">
-            <h2 class="slide-title">The First Star: Miami.</h2>
-            <ul class="text-left slide-content list-disc ml-8">
-                <li>Art Basel is where everyone goes to get famous. Perfect for us.</li>
-                <li>We'll make our own stars. The media will love it. The investors will love it.</li>
-                <li>Miami is the perfect place to start. Everybody wants to be a star there.</li>
-            </ul>
+            <div class="slide-text-content">
+                <h2 class="slide-title">The First Star: Miami.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>Art Basel is where everyone goes to get famous. Perfect for us.</li>
+                    <li>We'll make our own stars. The media will love it. The investors will love it.</li>
+                    <li>Miami is the perfect place to start. Everybody wants to be a star there.</li>
+                </ul>
+            </div>
             <div class="visual slide-4-visual"></div>
         </div>
 
         <!-- Slide 5: The Long-Term Vision -->
         <div id="slide-5" class="slide content-slide">
-            <h2 class="slide-title">More than a truck. The Brand.</h2>
-            <ul class="text-left slide-content list-disc ml-8">
-                <li>Every truck is a branch of our big, beautiful brand.</li>
-                <li>We'll make buying materials a simple, factory process. Everyone gets the same thing.</li>
-                <li>We'll make getting a job easy. You just join the factory.</li>
-                <li>Our plan is to make art like a product. For the people. By the people.</li>
-            </ul>
+            <div class="slide-text-content">
+                <h2 class="slide-title">More than a truck. The Brand.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>Every truck is a branch of our big, beautiful brand.</li>
+                    <li>We'll make buying materials a simple, factory process. Everyone gets the same thing.</li>
+                    <li>We'll make getting a job easy. You just join the factory.</li>
+                    <li>Our plan is to make art like a product. For the people. By the people.</li>
+                </ul>
+            </div>
             <div class="visual slide-5-visual"></div>
         </div>
 
         <!-- Slide 6: Credibility -->
         <div id="slide-6" class="slide content-slide">
-            <h2 class="slide-title">A Proven Brand.</h2>
-            <ul class="text-left slide-content list-disc ml-8">
-                <li>Dila is the artist behind it all. He knows how to make a thing famous.</li>
-                <li>He already did it once. He made Big Art Studios. It worked.</li>
-                <li>This is just the next product. The next brand. The next star.</li>
-            </ul>
-            <div class="visual slide-6-visual"></div>
+            <div class="slide-text-content">
+                <h2 class="slide-title">A Proven Brand.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>Dila is the artist behind it all. He knows how to make a thing famous.</li>
+                    <li>He already did it once. He made Big Art Studios. It worked.</li>
+                    <li>This is just the next product. The next brand. The next star.</li>
+                </ul>
+            </div>
+            <video class="visual slide-6-visual" autoplay loop muted playsinline>
+                <source src="media/videos/Dan.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+
+        <!-- Slide 7: Artist Profile -->
+        <div id="slide-7" class="slide content-slide">
+            <div class="slide-text-content">
+                <h2 class="slide-title">The Artist: Travis.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>A true original. He makes things you've never seen before.</li>
+                    <li>He's not just an artist; he's a showman.</li>
+                    <li>INdoVisuaL is in the House, time to get REAL</li>
+                </ul>
+            </div>
+            <video class="visual slide-7-visual" autoplay loop muted playsinline>
+                <source src="media/videos/Travis.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
 
         <button id="prevBtn" class="nav-button hidden" aria-label="Previous Slide">&#9664;</button>
