--- a/index.html
+++ b/index.html
@@ -99,17 +99,29 @@
             </video>
         </div>
 
-        <!-- Slide 7: Artist Profile -->
+        <!-- Slide 7: Featured Artists Intro -->
         <div id="slide-7" class="slide content-slide">
             <div class="slide-text-content">
-                <h2 class="slide-title">The Artist: Travis.</h2>
+                <h2 class="slide-title">Featured Artists</h2>
                 <ul class="text-left slide-content list-disc ml-8">
-                    <li>A true original. He makes things you've never seen before.</li>
-                    <li>He's not just an artist; he's a showman.</li>
-                    <li>INdoVisuaL is in the House, time to get REAL</li>
+                    <li>Meet the talent behind the movement.</li>
+                    <li>Each artist brings a unique vision to the factory floor.</li>
                 </ul>
             </div>
-            <video class="visual slide-7-visual" autoplay loop muted playsinline>
+            <div class="visual slide-7-visual"></div>
+        </div>
+
+        <!-- Slide 8: Artist Profile (Travis) -->
+        <div id="slide-8" class="slide content-slide">
+            <div class="slide-text-content">
+                <h2 class="slide-title">The Artist: INdoVisuaL.</h2>
+                <ul class="text-left slide-content list-disc ml-8">
+                    <li>He is a new type of star. The art is happening now.</li>
+                    <li>He makes things real. Like they are supposed to be.</li>
+                    <li>He is proof that the Factory works</li>
+                </ul>
+            </div>
+            <video class="visual slide-8-visual" autoplay loop muted playsinline>
                 <source src="media/videos/Travis.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
